refactor: Add MaximumLocationPolicy and apply it to test code